[package]
name = "paperplex"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
tao = "0.28"
toml = "0.8"
tray-icon = "0.14"
wry = "0.40"

[target.'cfg(windows)'.dependencies.windows]
version = "0.56"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1"
